feat: add compression
Signed-off-by: Luca Foppiano <luca@foppiano.org>